Issue #1079 - Build failure due to failing test in wro4j-maven-plugin * Fixed failing tests * Cleaned up the Maven setup * Upgraded several dependencies * Fixed compilation warnings due to code quality